1.0.1
Added Missing Localization on award ChatMessage


1.0.0
Refactored into proper Application Model
Added text enrichers for Reward Application [[/award value description]]
Added Localization for all text
Added chat command /award {optional value} {optional description}
Removed Kingdom XP Dialog 
Added shim for `game.pf2e_awardxp.openDialog()` and `game.pf2e_awardxp.openPlayerDialog()`


0.1.3
Added Kingdom XP Dialog at `game.pf2e_awardxp.openKingdomDialog()`
Renamed `game.pf2e_awardxp.openDialog()` to `game.pf2e_awardxp.openPlayerDialog()`
    * `game.pf2e_awardxp.openDialog()` will continue to work for the time being.
Added an icon and reformed the XP ChatMessage

0.1.1
Updated `openDialog` method to allow passing of options as an object
Updated AwardXP Dialog window for custom descriptions.
You may now call `game.pf2e_awardxp.openDialog()` to open the dialog directly

0.1.0 Initial Release